--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -21635,6 +21635,12 @@ body {
   color: var(--col-dark-grey);
 }
 
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+  font-family: var(--ff-heading);
+  font-weight: 400;
+  line-height: var(--lh-600);
+}
+
 /* ----------------------------------------------------------
    Text classes (use these directly)
 ---------------------------------------------------------- */
@@ -22236,7 +22242,6 @@ header a.nav-link {
   transition: var(--transition);
   display: inline-block;
   text-decoration: none;
-  text-transform: uppercase;
   padding: 0;
   position: relative;
 }
@@ -22468,16 +22473,17 @@ header .logo {
 }
 .home-hero__title {
   font-family: var(--ff-body);
-  font-size: var(--fs-400);
+  font-size: var(--fs-600);
   font-weight: var(--fw-light);
   line-height: var(--lh-400);
   color: var(--col-white);
 }
 .home-hero__subtitle {
   font-family: var(--ff-heading);
-  font-size: var(--fs-400);
+  font-size: var(--fs-500);
   color: var(--col-white);
   text-align: end;
+  opacity: 0;
 }
 
 @keyframes gradientZoomRotate {
@@ -22513,11 +22519,12 @@ header .logo {
   }
 }
 .portfolio-list {
+  border-bottom: 1px solid var(--col-mid-grey);
   /* Responsive: stack on mobile */
 }
 .portfolio-list__grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
   align-items: stretch;
 }
@@ -22609,16 +22616,6 @@ header .logo {
   }
   .portfolio-list .portfolio-card__excerpt {
     color: var(--col-body);
-  }
-}
-@media (min-width: 992px) {
-  .portfolio-list__grid {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .portfolio-list__grid {
-    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -22814,23 +22811,6 @@ header .logo {
   column-gap: 1rem;
   row-gap: 0.5rem;
 }
-.faqs__icon {
-  width: 40px;
-  height: 40px;
-  flex-shrink: 0;
-  grid-row: 1/3;
-  grid-column: 1;
-}
-.faqs__icon::before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 50 50' width='50px' height='50px'%3E%3Cpath d='M 25 4.0625 C 12.414063 4.0625 2.0625 12.925781 2.0625 24 C 2.0625 30.425781 5.625 36.09375 11 39.71875 C 10.992188 39.933594 11 40.265625 10.71875 41.3125 C 10.371094 42.605469 9.683594 44.4375 8.25 46.46875 L 7.21875 47.90625 L 9 47.9375 C 15.175781 47.964844 18.753906 43.90625 19.3125 43.25 C 21.136719 43.65625 23.035156 43.9375 25 43.9375 C 37.582031 43.9375 47.9375 35.074219 47.9375 24 C 47.9375 12.925781 37.582031 4.0625 25 4.0625 Z M 25 5.9375 C 36.714844 5.9375 46.0625 14.089844 46.0625 24 C 46.0625 33.910156 36.714844 42.0625 25 42.0625 C 22.996094 42.0625 21.050781 41.820313 19.21875 41.375 L 18.65625 41.25 L 18.28125 41.71875 C 18.28125 41.71875 15.390625 44.976563 10.78125 45.75 C 11.613281 44.257813 12.246094 42.871094 12.53125 41.8125 C 12.929688 40.332031 12.9375 39.3125 12.9375 39.3125 L 12.9375 38.8125 L 12.5 38.53125 C 7.273438 35.21875 3.9375 29.941406 3.9375 24 C 3.9375 14.089844 13.28125 5.9375 25 5.9375 Z'/%3E%3C/svg%3E");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
 .faqs__question {
   grid-row: 1;
   grid-column: 2;
@@ -22841,6 +22821,38 @@ header .logo {
 }
 .faqs__answer p {
   margin-top: 0;
+}
+
+.accordion-button {
+  background-color: var(--col-light-grey);
+}
+.accordion-button:focus {
+  box-shadow: none;
+  border-color: inherit;
+}
+.accordion-button::after {
+  background-image: none !important;
+  content: "+";
+  font-size: 1.5rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.25rem;
+  height: 1.25rem;
+  transform: none !important;
+}
+.accordion-button:not(.collapsed) {
+  background-color: var(--col-light-grey);
+  box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
+}
+.accordion-button:not(.collapsed)::after {
+  background-image: none !important;
+  content: "−";
+}
+
+.accordion {
+  --bs-accordion-bg: transparent !important;
 }
 
 .feed {
