--- a/src/sass/theme/blocks/_lc_home_hero.scss
+++ b/src/sass/theme/blocks/_lc_home_hero.scss
@@ -75,16 +75,17 @@
   }
   &__title {
     font-family: var(--ff-body);
-    font-size: var(--fs-400);
+    font-size: var(--fs-600);
     font-weight: var(--fw-light);
     line-height: var(--lh-400);
     color: var(--col-white);
   }
   &__subtitle {
     font-family: var(--ff-heading);
-    font-size: var(--fs-400);
+    font-size: var(--fs-500);
     color: var(--col-white);
     text-align: end;
+    opacity: 0;
   }
 }
 
