--- a/src/sass/theme/blocks/_lc_portfolio_list.scss
+++ b/src/sass/theme/blocks/_lc_portfolio_list.scss
@@ -1,7 +1,9 @@
 .portfolio-list {
+  border-bottom: 1px solid var(--col-mid-grey);
+
   &__grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
     align-items: stretch;
   }
@@ -104,15 +106,4 @@
     }
   }
 
-  @media (min-width: 992px) {
-    &__grid {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
-
-  @media (min-width: 768px) and (max-width: 991.98px) {
-    &__grid {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
 }
