--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -72,7 +72,7 @@ body {
 // }
 
 .blog {
-  margin-top: var(--h-top);
+  // margin-top: var(--h-top);
   .post_hero {
     width: 100%;
     aspect-ratio: 16 / 9;
