--- a/src/sass/theme/blocks/_lc_portfolio_list.scss
+++ b/src/sass/theme/blocks/_lc_portfolio_list.scss
@@ -31,7 +31,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    aspect-ratio: 3 / 2;
     object-fit: cover;
     object-position: center;
     padding: 0.5rem;
