--- a/src/sass/theme/blocks/_lc_latest_media.scss
+++ b/src/sass/theme/blocks/_lc_latest_media.scss
@@ -25,32 +25,38 @@
 
   &__card-1 {
     .latest-media__image {
-      aspect-ratio: 4 / 3;
+      // aspect-ratio: 4 / 3;
+      aspect-ratio: 3 / 2;
     }
   }
   &__card-2 {
     .latest-media__image {
-      aspect-ratio: 16 / 9;
+      // aspect-ratio: 16 / 9;
+      aspect-ratio: 3 / 2;
     }
   }
   &__card-3 {
     .latest-media__image {
-      aspect-ratio: 5 / 4;
+      // aspect-ratio: 5 / 4;
+      aspect-ratio: 3 / 2;
     }
   }
   &__card-4 {
     .latest-media__image {
-      aspect-ratio: 21 / 9;
+      // aspect-ratio: 21 / 9;
+      aspect-ratio: 3 / 2;
     }
   }
   &__card-5 {
     .latest-media__image {
-      aspect-ratio: 4 / 3;
+      // aspect-ratio: 4 / 3;
+      aspect-ratio: 3 / 2;
     }
   }
   &__card-6 {
     .latest-media__image {
-      aspect-ratio: 1 / 1;
+      // aspect-ratio: 1 / 1;
+      aspect-ratio: 3 / 2;
     }
   }
   &__type {
