--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -4,7 +4,7 @@
 @import "buttons";
 @import "header";
 @import "footer";
-@import "gallery";
+@import "blog";
 @import "blocks/blocks";
 
 // Adjust fixed header when admin bar is present
@@ -71,40 +71,6 @@ body {
 //   margin-top: var(--h-top);
 // }
 
-.blog {
-  // margin-top: var(--h-top);
-  .post_hero {
-    width: 100%;
-    aspect-ratio: 16 / 9;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    margin-bottom: 1rem;
-  }
-  .post_meta {
-    padding-inline-start: 0;
-  }
-
-  .sidebar {
-    position: sticky;
-    top: var(--h-top);
-    margin-bottom: 1rem;
-  }
-  .sidebar__post {
-    a {
-      display: block;
-      background-color: white;
-      text-decoration: none;
-      box-shadow: var(--shadow-in);
-      transition: box-shadow var(--transition);
-      &:hover {
-        box-shadow: var(--shadow-out);
-      }
-    }
-  }
-}
 
 .ratio-9x16 {
   --bs-aspect-ratio: calc(16 / 9 * 100%); /* = 177.77% */
