--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -22420,6 +22420,67 @@ header .logo {
   box-shadow: var(--shadow-out);
 }
 
+.latest-posts__item {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  transition: transform var(--transition);
+  text-decoration: none;
+}
+.latest-posts__item:hover {
+  text-decoration: none;
+}
+.latest-posts__item:hover .latest-posts__image {
+  transform: scale(1.05);
+}
+.latest-posts__img-wrapper {
+  overflow: hidden;
+  margin-bottom: 0.75rem;
+  position: relative;
+}
+.latest-posts__image {
+  width: 100%;
+  aspect-ratio: 4/3;
+  display: block;
+  -o-object-fit: cover;
+  object-fit: cover;
+  transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.latest-posts__pill {
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+  background-color: var(--col-accent);
+  color: var(--col-white);
+  padding: 0.2rem 0.75rem;
+  font-size: var(--fs-100);
+  text-transform: uppercase;
+  letter-spacing: var(--ls-900);
+  font-weight: var(--fw-bold);
+  border-radius: 100vw;
+}
+.latest-posts__inner h3, .latest-posts__inner .h3 {
+  margin: 0;
+  font-size: var(--fs-400);
+  font-weight: var(--fw-medium);
+  font-family: var(--ff-body);
+}
+.latest-posts__meta {
+  font-size: var(--text-sm);
+  color: var(--col-neutral-600);
+  display: flex;
+  gap: 1rem;
+  margin-top: 0.5rem;
+}
+.latest-posts__meta span {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+.latest-posts__meta span i {
+  color: var(--col-accent-500);
+}
+
 .home-hero {
   position: relative;
   overflow: hidden;
