--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -22455,30 +22455,22 @@ header .logo {
   padding: 0.2rem 0.75rem;
   font-size: var(--fs-100);
   text-transform: uppercase;
-  letter-spacing: var(--ls-900);
-  font-weight: var(--fw-bold);
+  letter-spacing: var(--ls-100);
+  font-weight: var(--fw-medium);
   border-radius: 100vw;
 }
 .latest-posts__inner h3, .latest-posts__inner .h3 {
   margin: 0;
-  font-size: var(--fs-400);
+  font-size: var(--fs-300);
   font-weight: var(--fw-medium);
   font-family: var(--ff-body);
 }
 .latest-posts__meta {
-  font-size: var(--text-sm);
-  color: var(--col-neutral-600);
+  font-size: var(--fs-100);
+  color: var(--col-mid-grey);
   display: flex;
   gap: 1rem;
   margin-top: 0.5rem;
-}
-.latest-posts__meta span {
-  display: flex;
-  align-items: center;
-  gap: 0.25rem;
-}
-.latest-posts__meta span i {
-  color: var(--col-accent-500);
 }
 
 .home-hero {
