--- a/src/sass/theme/blocks/_lc_latest_media.scss
+++ b/src/sass/theme/blocks/_lc_latest_media.scss
@@ -14,6 +14,7 @@
   &__image-wrapper {
     overflow: hidden;
     margin-bottom: 0.75rem;
+    aspect-ratio: 3 / 2;
   }
   &__image {
     width: 100%;
